--- a/_config.yml
+++ b/_config.yml
@@ -1,4 +1,4 @@
-name:               "Victoria A Bogdan"
+name:               "Victoria Bogdan Tejeda"
 description:        ""
 
 url:                ""
